public/css/site.styl
body
  padding-top 60px

.navbar {
  margin-bottom 9px;  
}

footer
  padding-left 15px
  padding-right 15px
  p
    border-top 1px solid #d7e0e2

.navbar-form
  .form-group
    margin-left 10px
  button
    margin-left 10px

.top-padding-med
  padding-top 10px

.margin-left-med
  margin-left 10px

.toast-top-right
  top 70px

.toast-success
  background-color #13987e

.chart-container
  float: left
  height: calc(100vh - 69px)
  width: calc(100vw - 82px)
  overflow: auto
  direction: rtl
  padding: 0px;
  border: 1px solid #d6d6d6
  .chart-content
    direction: ltr
    height: 100%
    width: 10000px
    .ohclbars
      height: 100%
      width: 100%
      stroke: black
      transform: rotate(180deg)
      transform-origin: 50% 50%
.yruler
  height: calc(100vh - 69px)
  width: 80px
  float: left
  border: 1px solid #fff
  ul
    display: table
    list-style-type: none
    height: 100%
    padding: 0px
    padding-left: 8px
    li
      display: table-row

